src/test/ui/regions/regions-enum-not-wf.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:19:18
   |
LL | enum Ref1<'a, T> {
   |               - help: consider adding an explicit lifetime bound...: `T: 'a`
LL |     Ref1Variant1(RequireOutlives<'a, T>),
   |                  ^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:24:25
   |
LL | enum Ref2<'a, T> {
   |               - help: consider adding an explicit lifetime bound...: `T: 'a`
LL |     Ref2Variant1,
LL |     Ref2Variant2(isize, RequireOutlives<'a, T>),
   |                         ^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:37:23
   |
LL | enum RefDouble<'a, 'b, T> {
   |                        - help: consider adding an explicit lifetime bound...: `T: 'b`
LL |     RefDoubleVariant1(&'a RequireOutlives<'b, T>),
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0309`.
